decrease left padding to prevent wrap
test

--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ margin: 0 20px 30px;
 }
 
 .socialmedia {
-  padding: 35px 5px 10px 10px;
+  padding: 35px 5px 10px 5px;
   text-align: center;
   font-size:0.5rem;
   margin: 0 2.3rem;
